primaryNav alignment fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -1272,6 +1272,7 @@
         background: #fff !important;
         color: #fff !important;
         border: 0px !important;
+        padding: 0px !important;
         float: left;
     }
     .active.nodeHidden:only-child {
